Ajeitnaod agluns detalhes

--- a/app/templates/filtrado.html
+++ b/app/templates/filtrado.html
@@ -33,7 +33,7 @@
                   <button class="alert alert-danger" role="alert" onclick="window.location ='/app/' ">Voltar</button>
 
       <section class="recommended">
-      <h2>Comunidades filtradas:</h2>
+      <h2>Comunidades encontradas:</h2>
       <div class="card-group" >
         {%if comunidades_filtradas %}
         {% for comunidade in comunidades_filtradas %}
