--- a/app/templates/indexComunidade.html
+++ b/app/templates/indexComunidade.html
@@ -8,6 +8,8 @@
   <title>Comunidades</title>
   <link rel="stylesheet" href="{% static 'css/milligram.cGeral.css' %}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <script src="https://unpkg.com/phosphor-icons"></script>
+
 </head>
 <body>
    <header>
@@ -23,8 +25,7 @@
 
         </form>
       </div>
-      <h2><a href="{% url 'sair' %}">Logout</a></h2>
-      <a href="{% url 'suporte' %}">Suporte</a>
+      <h2 class="sair"><a class="Logout" href="{% url 'sair' %}"><i class="ph ph-sign-out"></i></a></h2>
     </header>
 
   <div class="container">
@@ -50,7 +51,7 @@
         </div>
                 {% endfor%}
           </div>
-            <button><a href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
+            <button class="entrar"><a href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
           
               </div> 
              
@@ -84,7 +85,7 @@
                 <p class="desc">{{ comunidade.descricao|truncatewords:10 }}</p>
               </div>
             </div>
-              <button><a href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
+              <button><a class="entrarComu" href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
           </div>
           
         {% endfor %}
@@ -102,7 +103,7 @@
   </div>
    
   <footer>
-      <i class="fas fa-user"></i>
+      <a href="minhaComunidade.html"><i class="fas fa-user"></i></a>
       {%if request.user.pontuacao < 4 %}
         <i class="fas fa-plus add-comu-user-normal" style="opacity: 0.4;" ></i>
         <script>
@@ -121,8 +122,9 @@
         </script>
       {%endif%}
    
-      <i class="fas fa-pencil-alt"></i>
+      <a class="suporte" href="{% url 'suporte' %}"><i class="ph ph-headset"></i></a>
     </footer>
+
     <script src="{% static 'js/index.js'%}"></script>
     <script>
    
