--- a/templates/static/css/milligram.cGeral.css
+++ b/templates/static/css/milligram.cGeral.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
@@ -26,15 +26,23 @@ html, body {
 
 /* Header */
 header {
-  margin-left: calc((100vw - 100%) / -2);
-  display: flex;
+  /* margin-left: calc((100vw - 100%) / -2);
+  display: grid;
+  grid-template-columns: auto 1fr auto;
   align-items: center;
-  justify-content: space-between;
-  background-color: #81d4fa;
+  /* justify-content: space-between; */
+  /* background-color: #81d4fa;
    padding: 15px 0;
-  /* border-radius: 20px; */
-  margin-bottom: 10px;
-}
+  border-radius: 20px; */
+  /* margin-bottom: 10px; */
+
+  display: grid;
+  grid-template-columns: auto 1fr auto; /* 3 colunas */
+  align-items: center;
+  background-color: #81d4fa;
+  padding: 15px 0;
+
+} 
 
 .header-left {
   display: flex;
@@ -53,15 +61,24 @@ header {
   color: #333;
 }
 
+.sair {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.Logout{
+  color: red;
+}
+
 /* Busca */
 .search-wrapper {
+  width: 97%;
   position: relative;
-  flex: 1;
 }
 
 .search-icon {
   position: absolute;
-  margin-left: 25px;
+  margin-left: 8px;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
@@ -71,9 +88,10 @@ header {
   cursor: pointer;
 }
 
+
 .search-bar {
-  width: 90%;
-  margin-left: 30px;
+  width: 100%;
+  margin-left: 10px;
   padding: 8px 8px 8px 30px;
   border-radius: 20px;
   border: none;
@@ -128,7 +146,28 @@ h3, h4 {
   border-radius: 15px;
   color: #fff;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
   
+}
+
+.card button, .entrar{
+  margin-top: auto;     
+  width: 100%;          
+  margin-bottom: 5px;
+  border-radius: 30px;
+  padding: 7px;
+  background-color: #71a0f3;
+  border-color: none;
+}
+
+.card button a{
+  display: block;      /* O link vira um bloco */
+  width: 100%;         /* Ocupa toda a largura do botão */
+  height: 100%;
+  text-decoration: none;
+  color: #004055;
+  font-weight: bold
 }
 
 /* Conteúdo do card */
@@ -185,8 +224,8 @@ footer i {
   font-size: 1.2em;
   color: #004055;
 
-  /* --- ESSENCIAL --- */
-white-space: normal;         
+  white-space: normal;         
   overflow-wrap: anywhere;    
   word-break: break-word; 
 }
+
