--- a/app/templates/criarComu.html
+++ b/app/templates/criarComu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar comunidade</title>
+    <link rel="stylesheet" href="{% static 'css/milligram.criarC.css' %}">
 </head>
 <body>
     <div id="modalCriar" class="modal-overlay">
