--- a/app/templates/indexComunidade.html
+++ b/app/templates/indexComunidade.html
@@ -34,29 +34,27 @@
       <div class="card-group" >
         {%if comunidades %}
         {% for comunidade in comunidades %}
-    <div class="card {{ comunidade.etiqueta }}" >
-                                      
-      <div class="card-content">
+   <div class="card {{ comunidade.cor }}">
+            <div class="card-content">
               <img src="{{ comunidade.capa_comunidade.url }}" alt="{{ comunidade.nome }}" />
               <div>
-                <h3 class="nome_comunidade">{{ comunidade.nome }}</h3>
+                <h3>{{ comunidade.nome }}</h3>
                 <p>{{ comunidade.membros.count }} membros</p>
-                <p class="desc">{{ comunidade.descricao|truncatewords:20  }}</p> 
-                <!-- safe par aintroduzir o html e :50 é aq uantidade de caracteres -->
-            <div style="display: flex;">
+                <p class="desc">{{ comunidade.descricao|truncatewords:10 }}</p>
+               <div style="">
                 {% for e in comunidade.etiquetas.all %}
         
         <div class="etiqueta etiqueta--{{e.corRGB}}">
              {{e.nome}}
+             
         </div>
                 {% endfor%}
           </div>
-            <button class="entrar"><a href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
-          
-              </div> 
-             
+              </div>
             </div>
-      </div>
+            
+              <button><a class="entrarComu" href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
+          </div>
         {% endfor %}
 
         {%else%}
@@ -83,8 +81,18 @@
                 <h3>{{ comunidade.nome }}</h3>
                 <p>{{ comunidade.membros.count }} membros</p>
                 <p class="desc">{{ comunidade.descricao|truncatewords:10 }}</p>
+               <div style="">
+                {% for e in comunidade.etiquetas.all %}
+        
+        <div class="etiqueta etiqueta--{{e.corRGB}}">
+             {{e.nome}}
+             
+        </div>
+                {% endfor%}
+          </div>
               </div>
             </div>
+            
               <button><a class="entrarComu" href="{% url 'comunidade' comunidade.id%} ">entrar</a></button>
           </div>
           
@@ -103,7 +111,8 @@
   </div>
    
   <footer>
-      <a href="minhaComunidade.html"><i class="fas fa-user"></i></a>
+          <a href="{% url 'suas_comunidades' %}"><i class="fas fa-user"></i></a>
+
       {%if request.user.pontuacao < 4 %}
         <i class="fas fa-plus add-comu-user-normal" style="opacity: 0.4;" ></i>
         <script>
@@ -113,13 +122,8 @@
           })
         </script>
       {%else %}
-       <i class="fas fa-plus add-comu-user-premium" ></i>
-        <script>
-          let aux2 = document.querySelector('.add-comu-user-premium')
-          aux2.addEventListener('click', ()=> {
-            alert('Você pode criar comunidade, deve aparecer o menu aqui')
-          })
-        </script>
+        <a href="{% url 'criar_comunidade'%}">   <i class="fas fa-plus add-comu-user-premium"  style="cursor:pointer ;"></i>
+</a>
       {%endif%}
    
       <a class="suporte" href="{% url 'suporte' %}"><i class="ph ph-headset"></i></a>
